--- a/sim/pom.xml
+++ b/sim/pom.xml
@@ -115,20 +115,20 @@
     <dependency>
         <groupId>org.apache.poi</groupId>
         <artifactId>poi</artifactId>
-        <version>5.2.4</version>
+        <version>4.1.2</version>
     </dependency>
 
   <dependency>
     <groupId>org.apache.poi</groupId>
     <artifactId>poi-ooxml</artifactId>
-    <version>5.2.4</version>
+    <version>4.1.2</version>
   </dependency>
 
   <!-- https://mvnrepository.com/artifact/org.apache.xmlbeans/xmlbeans --> 
   <dependency>
       <groupId>org.apache.xmlbeans</groupId>
       <artifactId>xmlbeans</artifactId>
-      <version>5.1.1</version>
+      <version>3.0.1</version>
   </dependency>
 
   <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml-schemas -->
@@ -139,11 +139,11 @@
   </dependency>
 
 
-    <dependency>
+    <!-- <dependency>
       <groupId>dom4j</groupId>
       <artifactId>dom4j</artifactId>
       <version>2.1.4</version>
-  </dependency>
+  </dependency> -->
 
   <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
   <dependency>
@@ -152,11 +152,11 @@
       <version>4.4</version>
   </dependency>
 
-  <dependency>
+  <!-- <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>2.14.0</version>
-  </dependency>
+  </dependency> -->
 
   </dependencies>
 
