--- a/sim/pom.xml
+++ b/sim/pom.xml
@@ -145,6 +145,13 @@
       <version>2.1.4</version>
   </dependency> -->
 
+  <dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-compress</artifactId>
+    <version>1.21</version>
+</dependency>
+
+
   <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
   <dependency>
       <groupId>org.apache.commons</groupId>
