--- a/sim/pom.xml
+++ b/sim/pom.xml
@@ -40,11 +40,24 @@
 
   <dependencies>
 
+    <!-- https://mvnrepository.com/artifact/org.ejml/ejml-core -->
+    <dependency>
+        <groupId>org.ejml</groupId>
+        <artifactId>ejml-core</artifactId>
+        <version>0.39</version>
+    </dependency>
+
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>2.0.7</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.ejml</groupId>
+      <artifactId>ejml-simple</artifactId>
+      <version>0.39</version>
+  </dependency>
 
 		<dependency>
 			<groupId>xerces</groupId>
