--- a/sim/pom.xml
+++ b/sim/pom.xml
@@ -137,6 +137,15 @@
     <version>4.1.2</version>
   </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+  <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>5.3.1</version>
+      <scope>test</scope>
+  </dependency>
+
+
   <!-- https://mvnrepository.com/artifact/org.apache.xmlbeans/xmlbeans --> 
   <dependency>
       <groupId>org.apache.xmlbeans</groupId>
